# webcam-capture

./: .gitignore  .gitmodules
scripts/: download_libtorch.sh
torch_model/: pyproject.toml
torch_model/src/torch_model/: __init__.py  model_export.py
webcam_capture/: CMakeLists.txt
webcam_capture/examples/: main.cpp
webcam_capture/include/: torch_inference.h  webcam_capture.h
webcam_capture/src/: torch_inference.cpp  webcam_capture.cpp
