[project]
name = "torch-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dieter Timmers", email = "dieter.timmers@vbti.nl" }]
requires-python = ">=3.12"
dependencies = ["torch>=2.0.0", "torchvision>=0.15.0"]

[project.optional-dependencies]
cpu = []
cuda = []

[project.scripts]
torch-model = "torch_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
